fixed : mac page lineup section alignment

--- a/assets/scss/mac.scss
+++ b/assets/scss/mac.scss
@@ -8,7 +8,7 @@ section .container{
 }
 
 section{
-    padding: 64px;
+    // padding: 64px;
 }
 
 sub-header {
@@ -21,6 +21,7 @@ sub-header {
 
 .carousel-container{
     margin-left: 0 !important;
+    max-width: none !important;
 }
 
 #carousel-header{
@@ -28,7 +29,7 @@ sub-header {
 }
 
 .mac-promotion-section{
-    margin-top:25px;    
+    margin-top:100px;    
 
     .title-wrapper{
         height: 169px;
@@ -67,6 +68,16 @@ sub-header {
 
 .mac-title-heading{
     padding: 0 30px;
+}
+
+.carousel-section{
+    // padding: 0 !important;
+    .container{
+        // padding: 64px;
+    }
+    .container-wrapper{
+        margin-left: 4rem;
+    }
 }
 
 
@@ -135,6 +146,10 @@ sub-header {
         background: url('/mac-page/card-section/mac_security__gfwda10khdym_xlarge_2x.jpg') center no-repeat;
         background-size: cover;
     }
+
+    .carousel-button-container{
+        // padding-right: 9.25rem;
+    }
 }
 
 
@@ -161,7 +176,7 @@ sub-header {
     }
 
     background-color: whitesmoke;
-    padding: 0 50px;
+    padding: 50px;
 
     .fw-bolder{
         svg{
@@ -216,6 +231,7 @@ sub-header {
 
 
     .card-body{
+        height: 300px;
         flex: none;
         .cta-buy-button{
             --bs-btn-border-color   : none;
@@ -352,6 +368,15 @@ sub-header {
     }
     .image-item{
         width:350px;
+        height: auto !important;
+        .row{
+            height: auto !important;
+        }
+    }
+}
+#display-gallery{
+    .card-body{
+        height: auto;
     }
 }
 //------^-----LINE UP SECTION-------^--------
@@ -462,7 +487,6 @@ sub-header {
     }
     .slider-wrapper{
         margin-top: 45px;
-        
     }
     .container-wrapper{
         display: flex;
@@ -761,22 +785,22 @@ section{
 }
 
 
-@media screen and (max-width: 860px){
-    .footer-column-section{
-        display: block !important;
-    }
-    .footer-column{
-        width: 100% !important;
-        padding: 0 0.75rem !important;
-    }
+// @media screen and (max-width: 860px){
+//     .footer-column-section{
+//         display: block !important;
+//     }
+//     .footer-column{
+//         width: 100% !important;
+//         padding: 0 0.75rem !important;
+//     }
 
-    .footer-container-box-separator{
-        margin-bottom: 0 !important;
-    }
-    .footer-container-box{
-        margin-bottom: 15px !important;
-    }
-    .footer-container-border .collapse{
-        display: block !important;
-    }
-}
+//     .footer-container-box-separator{
+//         margin-bottom: 0 !important;
+//     }
+//     .footer-container-box{
+//         margin-bottom: 15px !important;
+//     }
+//     .footer-container-border .collapse{
+//         display: block !important;
+//     }
+// }
