--- a/components/carousel/carousel.scss
+++ b/components/carousel/carousel.scss
@@ -19,7 +19,7 @@
     .carousel-button-container{
         display: flex;
         justify-content: flex-end;
-        margin: 30px;
+        padding-right: 30px;
         gap:30px;
     }
 
