--- a/components/footer/footer.scss
+++ b/components/footer/footer.scss
@@ -182,20 +182,24 @@ footer {
 
 @media screen and (max-width: 760px){
     .footer-column-section{
-        display: block;
+        display: block !important;
     }
     .footer-column{
-        width: 100%;
-        padding: 0 0.75rem;
+        width: 100% !important;
+        padding: 0 0.75rem !important;
     }
 
     .footer-container-box-separator{
-        margin-bottom: 0;
+        margin-bottom: 0 !important;
     }
     .footer-container-box{
-        margin-bottom: 15px;
+        margin-bottom: 15px !important;
     }
     .footer-container-border .collapse{
+        display: block !important;
+    }
+
+    .footer-lower-container{
         display: block;
     }
 }
